@@ -1,5 +1,15 @@
 2022-02-27  Antoine Quint  <graouts@webkit.org>
 
+        [svg] stop-opacity should be clamped to the [0,1] range
+        https://bugs.webkit.org/show_bug.cgi?id=237255
+
+        Reviewed by Dean Jackson.
+
+        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
+
+2022-02-27  Antoine Quint  <graouts@webkit.org>
+
         [svg] fill-opacity should be clamped to the [0,1] range
         https://bugs.webkit.org/show_bug.cgi?id=237252
 
